syntax = "proto3";
package grades;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/slomus/USOSWEB/src/backend/modules/common/gen/grades";

message Grade {
  int32 grade_id = 10;
  int32 album_nr = 11;
  int32 class_id = 12;
  int32 subject_id = 13;
  string value = 14;
  int32 weight = 15;
  int32 attempt = 16;
  int32 added_by_teaching_staff_id = 17;
  string comment = 18;
  string created_at = 19;
}

message ListGradesRequest {
  optional int32 album_nr = 10;
}

message ListGradesResponse {
  repeated Grade grades = 10;
  string message = 11;
}

message AddGradeRequest {
  int32 album_nr = 10;
  int32 class_id = 11;
  int32 subject_id = 12;
  string value = 13;
  optional int32 weight = 14;
  optional int32 attempt = 15;
  optional string comment = 16;
}

message AddGradeResponse {
  Grade grade = 10;
  string message = 11;
}

service GradesService {
  rpc ListGrades(ListGradesRequest) returns (ListGradesResponse) {
    option (google.api.http) = {
      get: "/api/grades"
    };
  }

  rpc AddGrade(AddGradeRequest) returns (AddGradeResponse) {
    option (google.api.http) = {
      post: "/api/grades"
      body: "*"
    };
  }
}


